syntax = "proto3";
package cosmos.accesscontrol.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/accesscontrol/constants.proto";

option go_package = "github.com/cosmos/cosmos-sdk/types/accesscontrol";

message AccessOperation {
    AccessType access_type  = 1;
    ResourceType resource_type  = 2;
    string identifier_template = 3;
}

message WasmAccessOperation {
    AccessOperation operation = 1;
    AccessOperationSelectorType selector_type = 2;
    string selector = 3;
}

message WasmAccessOperations {
    string message_name = 1;
    repeated WasmAccessOperation wasm_operations = 2;
}

message MessageDependencyMapping {
    string message_key = 1;
    repeated AccessOperation access_ops = 2 [
        (gogoproto.nullable) = false
    ];
    bool dynamic_enabled = 3;
}

message WasmDependencyMapping {
    bool enabled = 1;
    repeated WasmAccessOperation base_access_ops = 2;
    repeated WasmAccessOperations query_access_ops = 3;
    repeated WasmAccessOperations execute_access_ops = 4;
    string reset_reason = 5;
    string contract_address = 6;
}
